// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mdx-loader snapshot with body 1`] = `
import React from "react";

/* @jsx mdx */
import mdx from "@mdx-js/mdx/create-element";
/* @jsx mdx */

const layoutProps = {};
export default class MDXContent extends React.Component {
  constructor(props) {
    super(props);
    this.layout = null;
  }

  render() {
    const { components, ...props } = this.props;
    const Layout = this.layout;
    return (
      <div name="wrapper" components={components}>
        <h1>{\`Some title\`}</h1>
        <p>{\`a bit of a paragraph\`}</p>
        <p>{\`some content\`}</p>
      </div>
    );
  }
}
MDXContent.isMDXComponent = true;
export const _frontmatter = {};

`;

exports[`mdx-loader snapshot with frontmatter 1`] = `
import React from "react";

/* @jsx mdx */
import mdx from "@mdx-js/mdx/create-element";
/* @jsx mdx */

const layoutProps = {};
export default class MDXContent extends React.Component {
  constructor(props) {
    super(props);
    this.layout = null;
  }

  render() {
    const { components, ...props } = this.props;
    const Layout = this.layout;
    return (
      <div name="wrapper" components={components}>
        <h1>{\`Some title\`}</h1>
        <p>{\`a bit of a paragraph\`}</p>
        <p>{\`some content\`}</p>
      </div>
    );
  }
}
MDXContent.isMDXComponent = true;
export const _frontmatter = {
  one: "two",
  three: 4,
  array: [1, 2, 3]
};

`;

exports[`mdx-loader snapshot with frontmatter-layout 1`] = `
import React from "react";

/* @jsx mdx */
import mdx from "@mdx-js/mdx/create-element";
/* @jsx mdx */

const layoutProps = {};
export default class MDXContent extends React.Component {
  constructor(props) {
    super(props);

    this.layout = ({ children, ...props }) => <div>{children}</div>;
  }

  render() {
    const { components, ...props } = this.props;
    const Layout = this.layout;
    return (
      <div name="wrapper" components={components}>
        <Layout {...layoutProps} {...props}>
          <h1>{\`Some title\`}</h1>
          <p>{\`a bit of a paragraph\`}</p>
          <p>{\`some content\`}</p>
        </Layout>
      </div>
    );
  }
}
MDXContent.isMDXComponent = true;
export const _frontmatter = {
  one: "two",
  three: 4,
  array: [1, 2, 3]
};

`;

exports[`mdx-loader snapshot with frontmatter-layout-namedExports 1`] = `
import React from "react";

/* @jsx mdx */
import mdx from "@mdx-js/mdx/create-element";
/* @jsx mdx */

export const meta = {
  author: "chris"
};
const layoutProps = {
  meta
};
export default class MDXContent extends React.Component {
  constructor(props) {
    super(props);

    this.layout = ({ children, ...props }) => <div>{children}</div>;
  }

  render() {
    const { components, ...props } = this.props;
    const Layout = this.layout;
    return (
      <div name="wrapper" components={components}>
        <Layout {...layoutProps} {...props}>
          <h1>{\`Some title\`}</h1>
          <p>{\`a bit of a paragraph\`}</p>
          <p>{\`some content\`}</p>
        </Layout>
      </div>
    );
  }
}
MDXContent.isMDXComponent = true;
export const _frontmatter = {
  one: "two",
  three: 4,
  array: [1, 2, 3]
};

`;

exports[`mdx-loader snapshot with frontmatter-namedExports 1`] = `
import React from "react";

/* @jsx mdx */
import mdx from "@mdx-js/mdx/create-element";
/* @jsx mdx */

export const meta = {
  author: "chris"
};
const layoutProps = {
  meta
};
export default class MDXContent extends React.Component {
  constructor(props) {
    super(props);
    this.layout = null;
  }

  render() {
    const { components, ...props } = this.props;
    const Layout = this.layout;
    return (
      <div name="wrapper" components={components}>
        <h1>{\`Some title\`}</h1>
        <p>{\`a bit of a paragraph\`}</p>
        <p>{\`some content\`}</p>
      </div>
    );
  }
}
MDXContent.isMDXComponent = true;
export const _frontmatter = {
  one: "two",
  three: 4,
  array: [1, 2, 3]
};

`;

exports[`mdx-loader snapshot with layout 1`] = `
import React from "react";

/* @jsx mdx */
import mdx from "@mdx-js/mdx/create-element";
/* @jsx mdx */

const layoutProps = {};
export default class MDXContent extends React.Component {
  constructor(props) {
    super(props);

    this.layout = ({ children, ...props }) => <div>{children}</div>;
  }

  render() {
    const { components, ...props } = this.props;
    const Layout = this.layout;
    return (
      <div name="wrapper" components={components}>
        <Layout {...layoutProps} {...props}>
          <h1>{\`Some title\`}</h1>
          <p>{\`a bit of a paragraph\`}</p>
          <p>{\`some content\`}</p>
        </Layout>
      </div>
    );
  }
}
MDXContent.isMDXComponent = true;
export const _frontmatter = {};

`;

exports[`mdx-loader snapshot with layout-namedExports 1`] = `
import React from "react";

/* @jsx mdx */
import mdx from "@mdx-js/mdx/create-element";
/* @jsx mdx */

export const meta = {
  author: "chris"
};
const layoutProps = {
  meta
};
export default class MDXContent extends React.Component {
  constructor(props) {
    super(props);

    this.layout = ({ children, ...props }) => <div>{children}</div>;
  }

  render() {
    const { components, ...props } = this.props;
    const Layout = this.layout;
    return (
      <div name="wrapper" components={components}>
        <Layout {...layoutProps} {...props}>
          <h1>{\`Some title\`}</h1>
          <p>{\`a bit of a paragraph\`}</p>
          <p>{\`some content\`}</p>
        </Layout>
      </div>
    );
  }
}
MDXContent.isMDXComponent = true;
export const _frontmatter = {};

`;

exports[`mdx-loader snapshot with namedExports 1`] = `
import React from "react";

/* @jsx mdx */
import mdx from "@mdx-js/mdx/create-element";
/* @jsx mdx */

export const meta = {
  author: "chris"
};
const layoutProps = {
  meta
};
export default class MDXContent extends React.Component {
  constructor(props) {
    super(props);
    this.layout = null;
  }

  render() {
    const { components, ...props } = this.props;
    const Layout = this.layout;
    return (
      <div name="wrapper" components={components}>
        <h1>{\`Some title\`}</h1>
        <p>{\`a bit of a paragraph\`}</p>
        <p>{\`some content\`}</p>
      </div>
    );
  }
}
MDXContent.isMDXComponent = true;
export const _frontmatter = {};

`;
